<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>com.garden</groupId>
  <artifactId>GardenSimulator</artifactId>
  <version>1.0-SNAPSHOT</version>
  <packaging>jar</packaging>

  <name>GardenSimulator</name>
  <url>http://maven.apache.org</url>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <junit.version>5.10.2</junit.version>
    </properties>

  <dependencies>
      <!-- JavaFX -->
      <dependency>
          <groupId>org.openjfx</groupId>
          <artifactId>javafx-controls</artifactId>
          <version>23.0.1</version>
      </dependency>

      <dependency>
          <groupId>org.openjfx</groupId>
          <artifactId>javafx-fxml</artifactId>
          <version>23.0.1</version>
      </dependency>

      <dependency>
          <groupId>org.openjfx</groupId>
          <artifactId>javafx-web</artifactId>
          <version>23.0.1</version>
      </dependency>

      <dependency>
          <groupId>org.openjfx</groupId>
          <artifactId>javafx-swing</artifactId>
          <version>23.0.1</version>
      </dependency>

      <dependency>
          <groupId>org.openjfx</groupId>
          <artifactId>javafx-media</artifactId>
          <version>23.0.1</version>
      </dependency>

      <!-- ControlsFX -->
      <dependency>
          <groupId>org.controlsfx</groupId>
          <artifactId>controlsfx</artifactId>
          <version>11.2.1</version>
      </dependency>

      <!-- FormsFX -->
      <dependency>
          <groupId>com.dlsc.formsfx</groupId>
          <artifactId>formsfx-core</artifactId>
          <version>11.6.0</version>
          <exclusions>
              <exclusion>
                  <groupId>org.openjfx</groupId>
                  <artifactId>*</artifactId>
              </exclusion>
          </exclusions>
      </dependency>

      <!-- ValidatorFX -->
      <dependency>
          <groupId>net.synedra</groupId>
          <artifactId>validatorfx</artifactId>
          <version>0.5.0</version>
          <exclusions>
              <exclusion>
                  <groupId>org.openjfx</groupId>
                  <artifactId>*</artifactId>
              </exclusion>
          </exclusions>
      </dependency>

      <!-- Icon Library -->
      <dependency>
          <groupId>org.kordamp.ikonli</groupId>
          <artifactId>ikonli-javafx</artifactId>
          <version>12.3.1</version>
      </dependency>

      <!-- BootstrapFX -->
      <dependency>
          <groupId>org.kordamp.bootstrapfx</groupId>
          <artifactId>bootstrapfx-core</artifactId>
          <version>0.4.0</version>
      </dependency>

      <!-- TilesFX -->
      <dependency>
          <groupId>eu.hansolo</groupId>
          <artifactId>tilesfx</artifactId>
          <version>21.0.3</version>
          <exclusions>
              <exclusion>
                  <groupId>org.openjfx</groupId>
                  <artifactId>*</artifactId>
              </exclusion>
          </exclusions>
      </dependency>

      <!-- FXGL -->
      <dependency>
          <groupId>com.github.almasb</groupId>
          <artifactId>fxgl</artifactId>
          <version>17.3</version>
          <exclusions>
              <exclusion>
                  <groupId>org.openjfx</groupId>
                  <artifactId>*</artifactId>
              </exclusion>
          </exclusions>
      </dependency>

    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <version>3.8.1</version>
      <scope>test</scope>
    </dependency>
  </dependencies>
    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <source>22</source>
                    <target>22</target>
                </configuration>
            </plugin>
            <!-- JavaFX Run Plugin -->
            <plugin>
                <groupId>org.openjfx</groupId>
                <artifactId>javafx-maven-plugin</artifactId>
                <version>0.0.8</version>
                <executions>
                    <execution>
                        <id>default-cli</id>
                        <configuration>
                            <mainClass>com.garden.GardenSimulator.View.Main</mainClass>
                            <launcher>app</launcher>
                            <jlinkZipName>app</jlinkZipName>
                            <jlinkImageName>app</jlinkImageName>
                            <noManPages>true</noManPages>
                            <stripDebug>true</stripDebug>
                            <noHeaderFiles>true</noHeaderFiles>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
</project>
